# DTW

./: .gitignore  CMakeLists.txt  Matrix.h  README.md  SignChecker.cpp  SignChecker.h  SignatureData.cpp  SignatureData.h  stdafx.h
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_dtw.cpp
cmake/: DTWConfig.cmake.in
tests/: CMakeLists.txt  test_dtw.cpp
